<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="50dp"
    tools:context="com.jm.uwi.labtechappfirebase.Activities.CourseSelectionActivity">

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:text="@string/python1"
        android:id="@+id/python_button"/>

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:text="@string/python2"
        android:id="@+id/second_python_button"/>

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:text="@string/java"
        android:id="@+id/java_button"/>

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/view_grades"
        android:visibility="gone"
        android:id="@+id/view_grades_button"/>

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:text="@string/view_users"
        android:visibility="gone"
        android:id="@+id/view_users_button"/>

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:text="@string/logout"
        android:id="@+id/logout_button"/>
</LinearLayout>
