<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="30dp"
    tools:context="com.jm.uwi.labtechappfirebase.Activities.GradingActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_id_input"
            android:hint="@string/student_id"
            android:maxLines="1"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:text="@string/lab_number"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/lab_selector"
            android:descendantFocusability="blocksDescendants"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:text="@string/lab_grade"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/lab_grade_selector"
            android:descendantFocusability="blocksDescendants"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/submit"
        android:id="@+id/submit_grade"/>
</LinearLayout>
