<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="50dp"
    tools:context="com.jm.uwi.labtechappfirebase.Activities.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_id"
            android:hint="@string/id_number"
            android:inputType="number"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/login"
        android:id="@+id/login_button"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:id="@+id/login_error"/>
</LinearLayout>